--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "countries-graphql",
+  "name": "countries-apollo-client",
   "private": true,
+  "keywords": [
+    "nextjs",
+    "graphql",
+    "chakraUI",
+    "apollo/client"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,6 +14,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
+    "@chakra-ui/icons": "^2.0.1",
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
